Fix UI title bar

--- a/src/WayfarersWings.Unity/WayfarersWings.Unity/Assets/UI/WayfarerWingsStyle.uss
+++ b/src/WayfarersWings.Unity/WayfarersWings.Unity/Assets/UI/WayfarerWingsStyle.uss
@@ -1,4 +1,6 @@
-VisualElement {
+:root {
+    --dark-red: rgb(133, 13, 0);
+    --background-lightgray-4: rgb(122, 133, 153);
 }
 
 #root {
@@ -29,10 +31,10 @@ VisualElement {
     min-width: 120px;
     min-height: 32px;
     flex-shrink: 0;
-    margin-left: 4px;
-    margin-right: 4px;
-    margin-top: 4px;
-    margin-bottom: 4px;
+    margin-left: 2px;
+    margin-right: 2px;
+    margin-top: 2px;
+    margin-bottom: 2px;
 }
 
 .portrait {
@@ -42,4 +44,47 @@ VisualElement {
     max-height: 80px;
     min-width: 80px;
     min-height: 80px;
+}
+
+#app-icon {
+    -unity-background-image-tint-color: var(--background-lightgray-4);
+}
+
+#close-button {
+    border-left-width: 0;
+    border-right-width: 0;
+    border-top-width: 0;
+    border-bottom-width: 0;
+    background-image: url('project://database/Assets/UI/Icons/ICO-Close-med.png?fileID=21300000&guid=ad733da383d8ee14693a95dbbf0ba8ac&type=3#ICO-Close-med');
+    width: 12px;
+    height: 12px;
+    flex-shrink: 0;
+    max-height: 12px;
+    max-width: 12px;
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    -unity-background-scale-mode: scale-to-fit;
+    margin-right: 4px;
+    -unity-background-image-tint-color: var(--background-lightgray-4);
+}
+
+#close-button:hover {
+    -unity-background-image-tint-color: var(--dark-red);
+}
+
+#title {
+    -unity-text-align: middle-left;
+    font-size: 14px;
+    -unity-font-definition: var(--font-title-big);
+    margin-left: 6px;
+}
+
+#title-bar {
+    margin: 0 2px 6px 0;
 }
