--- a/src/WayfarersWings.Unity/WayfarersWings.Unity/Assets/UI/WingsAppWindow.uxml
+++ b/src/WayfarersWings.Unity/WayfarersWings.Unity/Assets/UI/WingsAppWindow.uxml
@@ -2,14 +2,17 @@
     <Style src="project://database/Assets/UI/WayfarerWingsStyle.uss?fileID=7433441132597879392&amp;guid=da08ea5b9d5173244bc93b4727182b4b&amp;type=3#WayfarerWingsStyle" />
     <ui:VisualElement name="root" class="root" style="flex-grow: 1; max-height: 400px;">
         <ui:VisualElement name="title-bar" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); align-self: stretch; justify-content: space-between;">
-            <ui:Label tabindex="-1" text="Achievements" display-tooltip-when-elided="true" name="title" />
-            <ui:Button text="x" display-tooltip-when-elided="true" enable-rich-text="false" name="close-button" />
+            <ui:VisualElement style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); flex-direction: row; align-items: center;">
+                <ui:VisualElement name="app-icon" style="flex-grow: 0; background-color: rgba(0, 0, 0, 0); background-image: url(&apos;project://database/Assets/Images/icon.png?fileID=21300000&amp;guid=7ed5cdb1dc1b4730bdb0f8096d09dd9d&amp;type=3#icon&apos;); width: 12px; height: 12px; flex-shrink: 0; -unity-background-scale-mode: scale-to-fit; max-width: 12px; max-height: 24px;" />
+                <ui:Label tabindex="-1" text="#WayfarerWings/UI/Achievements" display-tooltip-when-elided="true" name="title" style="padding-bottom: 0;" />
+            </ui:VisualElement>
+            <ui:Button display-tooltip-when-elided="true" enable-rich-text="false" name="close-button" />
         </ui:VisualElement>
         <ui:VisualElement style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); flex-direction: row;">
             <ui:Button text="Debug" display-tooltip-when-elided="true" name="debug-button" />
             <ui:Button text="Kerbals" display-tooltip-when-elided="true" name="kerbals-button" />
         </ui:VisualElement>
-        <ui:ScrollView scroll-deceleration-rate="0,135" elasticity="0,1" name="ribbons-tab" class="ribbons-space" />
-        <ui:ScrollView scroll-deceleration-rate="0,135" elasticity="0,1" name="kerbals-tab" style="display: none;" />
+        <ui:ScrollView scroll-deceleration-rate="0,135" elasticity="0,1" name="ribbons-tab" class="ribbons-space" style="visibility: visible; display: none;" />
+        <ui:ScrollView scroll-deceleration-rate="0,135" elasticity="0,1" name="kerbals-tab" style="display: flex;" />
     </ui:VisualElement>
 </ui:UXML>
