--- a/src/WayfarersWings.Unity/WayfarersWings.Unity/Assets/UI/WingsAppWindow.uxml
+++ b/src/WayfarersWings.Unity/WayfarersWings.Unity/Assets/UI/WingsAppWindow.uxml
@@ -8,17 +8,14 @@
             </ui:VisualElement>
             <ui:Button display-tooltip-when-elided="true" enable-rich-text="false" name="close-button" />
         </ui:VisualElement>
-        <ui:VisualElement style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); flex-direction: row;">
+        <ui:VisualElement name="VisualElement" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); flex-direction: row; visibility: visible; display: none;">
             <ui:Button text="Debug" display-tooltip-when-elided="true" name="debug-button" />
             <ui:Button text="Kerbals" display-tooltip-when-elided="true" name="kerbals-button" />
         </ui:VisualElement>
         <ui:ScrollView scroll-deceleration-rate="0,135" elasticity="0,1" name="ribbons-tab" class="ribbons-space" style="visibility: visible; display: none;" />
-        <ui:ScrollView scroll-deceleration-rate="0,135" elasticity="0,1" name="kerbals-tab" style="display: flex;" />
-        <ui:VisualElement name="tooltip" class="tooltip tooltiptemp">
-            <ui:VisualElement name="tooltip__border" class="tooltip__border" />
-            <ui:VisualElement style="flex-grow: 1; background-color: rgba(0, 0, 0, 0);">
-                <ui:Label tabindex="-1" text="Achievement name example of a very long text, Achievement name example of a very long text" display-tooltip-when-elided="true" name="tooltip__text" class="tooltip__text" />
-            </ui:VisualElement>
+        <ui:VisualElement style="background-color: rgba(0, 0, 0, 0); width: 100%; height: 100%; flex-direction: row;">
+            <ui:ScrollView scroll-deceleration-rate="0,135" elasticity="0,1" name="kerbals-tab" style="display: flex;" />
+            <ui:ScrollView scroll-deceleration-rate="0,135" elasticity="0,1" />
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
