--- a/src/WayfarersWings.Unity/WayfarersWings.Unity/Assets/UI/KerbalWingsRow.uxml
+++ b/src/WayfarersWings.Unity/WayfarersWings.Unity/Assets/UI/KerbalWingsRow.uxml
@@ -1,10 +1,14 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/UI/WayfarerWingsStyle.uss?fileID=7433441132597879392&amp;guid=da08ea5b9d5173244bc93b4727182b4b&amp;type=3#WayfarerWingsStyle" />
-    <ui:VisualElement style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); flex-direction: row;">
-        <ui:VisualElement style="background-color: rgba(0, 0, 0, 0); margin-right: 10px; align-self: stretch; justify-content: flex-start; align-items: center;">
-            <ui:VisualElement name="portrait" class="portrait" style="flex-grow: 1;" />
-            <ui:Label tabindex="-1" text="Kerbal Name" display-tooltip-when-elided="true" name="name" style="-unity-text-align: upper-center; margin-top: 6px;" />
+    <ui:VisualElement style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); padding-left: 4px; padding-right: 4px; padding-top: 2px; padding-bottom: 2px;">
+        <ui:VisualElement class="wing-row__container" style="flex-grow: 1; flex-direction: row;">
+            <ui:VisualElement class="wing-row__details">
+                <ui:VisualElement name="portrait" class="portrait" style="flex-grow: 1;" />
+                <ui:Label tabindex="-1" text="Kerbal Name" display-tooltip-when-elided="true" name="name" class="wing-row__name" style="font-size: 12px; padding-right: 2px; padding-left: 0; padding-top: 0; padding-bottom: 0;" />
+                <ui:Label tabindex="-1" text="10 Missions" display-tooltip-when-elided="true" name="missions-label" style="font-size: 11px; color: rgb(102, 113, 137);" />
+            </ui:VisualElement>
+            <ui:VisualElement class="vertical-separator" style="flex-grow: 0; width: 2px;" />
+            <ui:VisualElement name="ribbons-space" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); flex-wrap: wrap; flex-direction: row;" />
         </ui:VisualElement>
-        <ui:VisualElement name="ribbons-space" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); flex-wrap: wrap; flex-direction: row;" />
     </ui:VisualElement>
 </ui:UXML>
