--- a/src/WayfarersWings.Unity/WayfarersWings.Unity/Assets/UI/WayfarerWingsStyle.uss
+++ b/src/WayfarersWings.Unity/WayfarersWings.Unity/Assets/UI/WayfarerWingsStyle.uss
@@ -9,6 +9,8 @@
     --gray-3: rgb(46, 53, 64);
     --gray-4: rgb(33, 38, 46);
     --gray-5: rgb(29, 32, 41);
+    --gray-6: rgb(25, 31, 37);
+    --button-bg: var(--gray-6);
     --blue-3: rgb(105, 109, 255);
     --blue-5: rgb(83, 86, 204);
     --darkblue-4: rgb(13, 13, 22);
@@ -67,18 +69,15 @@
 }
 
 .portrait {
-    width: 80px;
-    height: 70px;
-    max-width: 80px;
-    max-height: 70px;
-    min-width: 80px;
-    min-height: 70px;
-    border-top-left-radius: 6px;
-    border-bottom-left-radius: 6px;
-    border-top-right-radius: 6px;
-    border-bottom-right-radius: 6px;
+    width: 60px;
+    height: 46px;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
     background-color: rgb(75, 77, 94);
     -unity-background-scale-mode: scale-to-fit;
+    flex-shrink: 0;
 }
 
 #app-icon {
@@ -252,4 +251,44 @@
     background-repeat: repeat-y;
     background-size: contain;
     -unity-background-image-tint-color: var(--gray-1);
+    margin-left: 16px;
+    margin-right: 16px;
+}
+
+.button--default {
+    border-width: 1px;
+    border-color: var(--button-bg);
+    background-color: var(--button-bg);
+}
+
+.button--default:hover {
+    border-color: var(--lightgray-2);
+}
+
+.button--invisible {
+    background-color: rgba(0, 0, 0, 0);
+    border-width: 0;
+    padding: 0;
+    margin: 0;
+    transition-property: background-color;
+    transition-duration: 0.2s;
+    height: auto;
+}
+
+.button--invisible:hover {
+    background-color: var(--blue-3-translucent);
+}
+
+.button--icon {
+    border-radius: 3px;
+    background-image: url('project://database/Assets/Images/StarIcon.png?fileID=2800000&guid=0c7012c530716fc43b04feedf556d7af&type=3#StarIcon');
+    -unity-background-scale-mode: scale-to-fit;
+    background-position: center center;
+    padding: 0;
+    margin: 0;
+    height: 22px;
+    width: 22px;
+    flex-shrink: 0;
+    flex-grow: 0;
+    background-size: 14px 14px;
 }
