--- a/src/WayfarersWings.Unity/WayfarersWings.Unity/Assets/UI/WingsAppWindow.uxml
+++ b/src/WayfarersWings.Unity/WayfarersWings.Unity/Assets/UI/WingsAppWindow.uxml
@@ -17,7 +17,7 @@
         <ui:ScrollView scroll-deceleration-rate="0,135" elasticity="0,1" name="ribbons-tab" class="ribbons-space" style="visibility: visible; display: none;" />
         <ui:VisualElement style="background-color: rgba(0, 0, 0, 0); width: 100%; height: 100%; flex-direction: row;">
             <ui:ScrollView scroll-deceleration-rate="0,135" elasticity="0,1" name="kerbals-tab" style="display: flex;" />
-            <ui:ScrollView scroll-deceleration-rate="0,135" elasticity="0,1" name="kerbal-detail" style="width: 100%; display: flex;" />
+            <ui:ScrollView scroll-deceleration-rate="0,135" elasticity="0,1" name="kerbal-detail" style="width: 100%; display: none;" />
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
