--- a/src/WayfarersWings.Unity/WayfarersWings.Unity/Assets/UI/WingsAppWindow.uxml
+++ b/src/WayfarersWings.Unity/WayfarersWings.Unity/Assets/UI/WingsAppWindow.uxml
@@ -1,6 +1,6 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/UI/WayfarerWingsStyle.uss?fileID=7433441132597879392&amp;guid=da08ea5b9d5173244bc93b4727182b4b&amp;type=3#WayfarerWingsStyle" />
-    <ui:VisualElement name="root" class="root" style="flex-grow: 1; max-height: 400px; width: 600px;">
+    <ui:VisualElement name="root" class="root" style="flex-grow: 1; max-height: 450px; width: 650px; height: 450px;">
         <ui:VisualElement name="title-bar" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); align-self: stretch; justify-content: space-between;">
             <ui:VisualElement style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); flex-direction: row; align-items: center;">
                 <ui:VisualElement name="app-icon" style="flex-grow: 0; background-color: rgba(0, 0, 0, 0); background-image: url(&apos;project://database/Assets/Images/icon.png?fileID=21300000&amp;guid=7ed5cdb1dc1b4730bdb0f8096d09dd9d&amp;type=3#icon&apos;); width: 12px; height: 12px; flex-shrink: 0; -unity-background-scale-mode: scale-to-fit; max-width: 12px; max-height: 24px;" />
@@ -10,14 +10,11 @@
         </ui:VisualElement>
         <ui:VisualElement name="tabs-selector" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); flex-direction: row; visibility: visible; display: flex; flex-shrink: 0; margin-bottom: 4px; margin-top: 4px;">
             <ui:VisualElement class="tabs-menu" style="min-height: 32px; align-self: center; justify-content: flex-start; align-items: center; flex-grow: 0; margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; padding-left: 4px; padding-right: 4px; padding-top: 4px; padding-bottom: 4px; border-top-left-radius: 6px; border-bottom-left-radius: 6px; border-top-right-radius: 6px; border-bottom-right-radius: 6px;">
-                <ui:Button text="Debug" display-tooltip-when-elided="true" name="debug-button" class="tabs-menu__item" />
+                <ui:Button text="Ribbons" display-tooltip-when-elided="true" name="ribbons-button" class="tabs-menu__item" />
                 <ui:Button text="Kerbals" display-tooltip-when-elided="true" name="kerbals-button" class="tabs-menu__item tabs-menu__item--last tabs-menu__item--selected" />
             </ui:VisualElement>
         </ui:VisualElement>
         <ui:ScrollView scroll-deceleration-rate="0,135" elasticity="0,1" name="ribbons-tab" class="ribbons-space" style="visibility: visible; display: none;" />
-        <ui:VisualElement style="background-color: rgba(0, 0, 0, 0); width: 100%; height: 100%; flex-direction: row;">
-            <ui:ScrollView scroll-deceleration-rate="0,135" elasticity="0,1" name="kerbals-tab" style="display: flex;" />
-            <ui:ScrollView scroll-deceleration-rate="0,135" elasticity="0,1" name="kerbal-detail" style="width: 100%; display: none;" />
-        </ui:VisualElement>
+        <ui:ScrollView scroll-deceleration-rate="0,135" elasticity="0,1" name="kerbals-tab" style="display: flex;" />
     </ui:VisualElement>
 </ui:UXML>
