--- a/src/WayfarersWings.Unity/WayfarersWings.Unity/Assets/UI/KerbalProfileRow.uxml
+++ b/src/WayfarersWings.Unity/WayfarersWings.Unity/Assets/UI/KerbalProfileRow.uxml
@@ -14,7 +14,7 @@
                             <ui:Label tabindex="-1" text="Valentina Kerman" display-tooltip-when-elided="true" name="name" class="wing-row__name" style="font-size: 13px; padding-right: 0; padding-left: 0; padding-top: 0; padding-bottom: 0; margin-top: 0; text-overflow: clip; white-space: normal;" />
                             <ui:VisualElement name="VisualElement" style="flex-grow: 0; background-color: rgba(0, 0, 0, 0); flex-direction: row; align-items: center; justify-content: space-between;">
                                 <ui:Label tabindex="-1" text="10 Missions" display-tooltip-when-elided="true" name="missions-label" style="font-size: 12px; color: rgb(102, 113, 137); padding-bottom: 0; padding-top: 2px; white-space: nowrap;" />
-                                <ui:VisualElement name="status" class="kerbal-status" style="margin-top: 3px;" />
+                                <ui:VisualElement name="status" class="kerbal-status kerbal-status--assigned" style="margin-top: 3px; margin-right: 3px;" />
                             </ui:VisualElement>
                         </ui:VisualElement>
                     </ui:Button>
